force-app/main/default/objects/Activity/fields/Actual_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Working_Hours__c</fullName>
    <description>Stores Actual Working Hours in minutes (calculated via flow).</description>
    <label>Actual Working Hours (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>