force-app/main/default/objects/Activity/fields/Boolean_Search_String__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Search_String__c</fullName>
    <inlineHelpText>Talent Search Keyword</inlineHelpText>
    <label>Candidate Search Keyword</label>
    <type>TextArea</type>
</CustomField>