force-app/main/default/objects/Activity/fields/Expected_Completion_time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_time__c</fullName>
    <inlineHelpText>will take time in minutes.</inlineHelpText>
    <label>Expected Completion Time (In Minutes)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>