force-app/main/default/objects/Activity/fields/Expected_Completion_time_With_InProgress__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_time_With_InProgress__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(In_Progress_Start_Time__c)),
        NOT(ISBLANK(Expected_Completion_time__c))
    ),
    In_Progress_Start_Time__c + (Expected_Completion_time__c / 1440),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Completion time With InProgress</label>
    <type>DateTime</type>
</CustomField>