force-app/main/default/objects/Activity/fields/In_Progress_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Start_Time__c</fullName>
    <label>In Progress Start Time</label>
    <type>DateTime</type>
</CustomField>