force-app/main/default/objects/Activity/fields/Next_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Notification_Date_Time__c</fullName>
    <description>This field stores the next scheduled date and time when a notification should be sent to the recruiter for the assigned daily task. The value is automatically calculated and updated by flows based on task creation and update logic.</description>
    <label>Next Notification Date Time</label>
    <type>DateTime</type>
</CustomField>