force-app/main/default/objects/Activity/fields/Overdue_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It identifies the Overdue email sent or not</inlineHelpText>
    <label>Overdue Email Sent</label>
    <type>Checkbox</type>
</CustomField>